--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springjpa</groupId>
-	<artifactId>demoJPA</artifactId>
+	<artifactId>project1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demoJPA</name>
 	<description>Demo project for Spring Boot</description>
