--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 			<version>2.18.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.3.232</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
