coverage with jacoco and add unitTest for UserService

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 			<version>2.3.232</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>6.3.4</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
@@ -122,6 +129,35 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/springjpa/demoJPA/dto/**</exclude>
+						<exclude>com/springjpa/demoJPA/entity/**</exclude>
+						<exclude>com/springjpa/demoJPA/mapper/**</exclude>
+						<exclude>com/springjpa/demoJPA/configuration/**</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 
 		</plugins>
